js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-import-source-assignment-expr-not-optional.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
import
.
source
(
)
;
}
